Add error page and websocket compatibility check.

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -31,6 +31,9 @@
     <script type="text/ng-template" id="/tpl/live.html">
 {{template "templates/live.html" .}}
     </script>
+    <script type="text/ng-template" id="/tpl/error.html">
+{{template "templates/error.html" .}}
+    </script>
 
     <script src="/public/js/jquery.js"></script>
     <script src="/public/js/bootstrap.js"></script>
