--- a/public/src/css/app.less
+++ b/public/src/css/app.less
@@ -329,6 +329,48 @@ body {
   }
 }
 
+.error-container {
+  margin-top: 4em;
+  margin-bottom: 4em;
+  text-align: center;
+  font-family: 'Open Sans', sans-serif;
+
+  h1, h2 {
+    font-family: 'Open Sans', sans-serif;
+  }
+  
+  h1 {
+    margin-bottom: .5em;
+    font-size: 120px;
+    line-height: 1em;
+  }
+
+  h2 {
+    margin-bottom: .75em;
+    font-size: 28px;
+  }
+
+  .error-detail {
+    margin-bottom: 1.5em;
+    font-size: 16px;
+  }
+
+  .error-action {
+    a {
+      margin: 0.5em;
+    }
+
+    i {
+      margin-right: 0.5em;
+    }
+
+    .btn-primary {
+      background-color: #ff9900;
+      border-color: #ff9900;
+    }
+  }
+}
+
 .footer-links {
   margin: 10px 0;
   padding-left: 0;
