Fix PID format error.

--- a/app/views/templates/server.html
+++ b/app/views/templates/server.html
@@ -32,7 +32,7 @@
           <tbody>
             <tr title="Process id of this server process">
               <td>PID</td>
-              <td ng-bind="serverStats.Pid | second2time"></td>
+              <td ng-bind="serverStats.Pid"></td>
             </tr>
             <tr title="Time since the server started">
               <td>Uptime</td>
