Add tool tab. Add get command widget.

--- a/app/views/header.html
+++ b/app/views/header.html
@@ -26,6 +26,9 @@
           <li ng-class="navClass('/live')">
             <a href="/#/live"><i class="glyphicon glyphicon-play"></i><span>Live</span></a>
           </li>
+          <li ng-class="navClass('/tool')">
+            <a href="/#/tool"><i class="glyphicon glyphicon-wrench"></i><span>Tool</span></a>
+          </li>
         </ul>
       </div>
     </div>
