--- a/app/views/templates/server.html
+++ b/app/views/templates/server.html
@@ -90,7 +90,7 @@
             </tr>
             <tr title="Number of misc fds used internally">
               <td>Reserved Fds</td>
-              <td><span ng-bind="serverStats.ReservedFds"></span> secs</td>
+              <td><span ng-bind="serverStats.ReservedFds"></span></td>
             </tr>
           </tbody>
         </table>
