--- a/app/views/index.html
+++ b/app/views/index.html
@@ -31,6 +31,9 @@
     <script type="text/ng-template" id="/tpl/live.html">
 {{template "templates/live.html" .}}
     </script>
+    <script type="text/ng-template" id="/tpl/tool.html">
+{{template "templates/tool.html" .}}
+    </script>
     <script type="text/ng-template" id="/tpl/error.html">
 {{template "templates/error.html" .}}
     </script>
