--- a/public/src/css/app.less
+++ b/public/src/css/app.less
@@ -284,6 +284,10 @@ body {
     .help-block {
       margin-bottom: 9px;
     }
+
+    .table {
+      background-color: white;
+    }
   }
 }
 
@@ -416,6 +420,13 @@ body {
       }
     }
   }
+}
+
+#slab_table {
+  max-height: 300px;
+  padding-right: 0;
+  overflow-x: hidden;
+  overflow-y: scroll;
 }
 
 
