Add revel tests.

--- a/app/views/templates/tool.html
+++ b/app/views/templates/tool.html
@@ -78,7 +78,7 @@
                   <tr>
                     <th>#</th>
                     <th>Chunk Size</th>
-                    <th>Chunk Per Page</th>
+                    <th>Chunks Per Page</th>
                   </tr>
                   <tbody>
                     <tr ng-repeat="slab in slabInfo">
