--- a/app/views/templates/slab.html
+++ b/app/views/templates/slab.html
@@ -9,14 +9,14 @@
         <table class="table table-bordered table-striped">
           <tbody>
             <tr>
-              <td title="The amount of space each chunk uses. One item will use one chunk of the appropriate size">Chunk Size</td>
-              <td ng-bind="slabsStats[slabIndex].ChunkSize | default:0 | unitResize"></td>
-              <td title="How many chunks exist within one page. A page by default is less than or equal to one megabyte in size. Slabs are allocated by page, then broken into chunks">Chunks Per Page</td>
-              <td ng-bind="slabsStats[slabIndex].ChunksPerPage | default:0"></td>
+              <td style="width: 25%;" title="The amount of space each chunk uses. One item will use one chunk of the appropriate size">Chunk Size</td>
+              <td style="width: 25%;" ng-bind="slabsStats[slabIndex].ChunkSize | default:0 | unitResize"></td>
+              <td style="width: 25%;" title="How many chunks exist within one page. A page by default is less than or equal to one megabyte in size. Slabs are allocated by page, then broken into chunks">Chunks Per Page</td>
+              <td style="width: 25%;" ng-bind="slabsStats[slabIndex].ChunksPerPage | default:0"></td>
             </tr>
             <tr>
-              <td>Chunks Used/Free/Total</td>
-              <td colspan="3">
+              <td colspan="2">Chunks Used/Free/Total</td>
+              <td colspan="2">
                 <span ng-bind="slabsStats[slabIndex].UsedChunks | default:0"></span> / <span ng-bind="slabsStats[slabIndex].FreeChunks | default:0"></span> / <span ng-bind="slabsStats[slabIndex].TotalChunks | default:0"></span>
               </td>
             </tr>
@@ -25,10 +25,10 @@
               <td colspan="3" ng-bind="slabsStats[slabIndex].MemRequested | default:0 | unitResize"></td>
             </tr>
             <tr>
-              <td title="Number of items presently stored in this class. Expired items are not automatically excluded">Items</td>
-              <td ng-bind="itemsStats[slabIndex].Number | default:0"></td>
-              <td title="Total number of pages allocated to the slab class">Pages</td>
-              <td ng-bind="slabsStats[slabIndex].TotalPages | default:0"></td>
+              <td style="width: 25%;" title="Number of items presently stored in this class. Expired items are not automatically excluded">Items</td>
+              <td style="width: 25%;" ng-bind="itemsStats[slabIndex].Number | default:0"></td>
+              <td style="width: 25%;" title="Total number of pages allocated to the slab class">Pages</td>
+              <td style="width: 25%;" ng-bind="slabsStats[slabIndex].TotalPages | default:0"></td>
             </tr>
             <tr>
               <td title="Age of the oldest item in the LRU">Oldest Item</td>
@@ -51,14 +51,14 @@
               <td colspan="3" ng-bind="itemsStats[slabIndex].Reclaimed | default:0"></td>
             </tr>
             <tr>
-              <td title="Number of expired items reclaimed/evicted from the LRU which were never touched after being set">Unfetched Expired/Evicted</td>
-              <td colspan="3">
+              <td colspan="2" title="Number of expired items reclaimed/evicted from the LRU which were never touched after being set">Unfetched Expired/Evicted</td>
+              <td colspan="2">
                 <span ng-bind="itemsStats[slabIndex].ExpiredUnfetched | default:0"></span> / <span ng-bind="itemsStats[slabIndex].EvictedUnfetched | default:0"></span>
               </td>
             </tr>
             <tr>
-              <td title="OOM: Number of times the underlying slab class was unable to store a new item. TR: Number of times we self-healed a slab with a refcount leak">Warning OOM/TR</td>
-              <td colspan="3">
+              <td colspan="2" title="OOM: Number of times the underlying slab class was unable to store a new item. TR: Number of times we self-healed a slab with a refcount leak">Warning OOM/TR</td>
+              <td colspan="2">
                 <span ng-bind="itemsStats[slabIndex].Outofmemory | default:0"></span> / <span ng-bind="itemsStats[slabIndex].Tailrepairs | default:0"></span>
               </td>
             </tr>
