--- a/app/views/templates/tool.html
+++ b/app/views/templates/tool.html
@@ -9,13 +9,15 @@
         <form class="form-horizontal" role="form" ng-submit="cacheGet()">
           <div class="form-group" ng-class="queryState()[1]">
             <label class="control-label col-md-2" for="cache_value">Key</label>
-            <div class="input-group col-md-5">
-              <input type="text" class="form-control" id="cache_key" ng-model="queryKey">
-              <span class="input-group-btn">
-                <input class="btn btn-primary" type="submit" value="Get"></input>
-              </span>
+            <div class="col-md-5">
+              <div class="input-group">
+                <input type="text" class="form-control" id="cache_key" ng-model="queryKey">
+                <span class="input-group-btn">
+                  <input class="btn btn-primary" type="submit" value="Get"></input>
+                </span>
+              </div>
+              <span class="help-block" ng-hide="queryState()[0]">Item not found!</span>
             </div>
-            <span class="help-block" ng-hide="queryState()[0]">Item not found!</span>
           </div>
           <div class="form-group">
             <label class="control-label col-md-2" for="cache_value">Value</label>
