--- a/app/views/index.html
+++ b/app/views/index.html
@@ -21,6 +21,9 @@
       <hr>
       {%template "footer.html" .%}
     </div>
+    <script>
+      window._S = {% .serverData %}
+    </script>
 
     <script type="text/ng-template" id="/tpl/server.html">
 {%template "templates/server.html" .%}
