Limit maximun heigh of the dorpdown menu

--- a/public/src/css/app.less
+++ b/public/src/css/app.less
@@ -127,6 +127,9 @@ body {
       -moz-border-radius-topright: 0;
       border-top-left-radius: 0;
       border-top-right-radius: 0;
+      max-height: 480px;
+      overflow-x: hidden;
+      overflow-y: auto;
 
       a {
         font-size: 12px;
